--- a/index.html
+++ b/index.html
@@ -5,34 +5,18 @@
   <title>Italian Accent TTS Tester</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#ffffff">
-  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="manifest" href="manifest.json">
   <link rel="icon" href="icon-192.png">
   <style>
-    body {
-      font-family: sans-serif;
-      padding: 20px;
-      max-width: 600px;
-      margin: auto;
-    }
-    button {
-      margin: 5px 0;
-      padding: 10px;
-      font-size: 1rem;
-      width: 100%;
-    }
-    input {
-      width: 100%;
-      padding: 10px;
-      font-size: 1rem;
-      margin-bottom: 20px;
-    }
+    body { font-family: sans-serif; padding: 20px; max-width: 600px; margin: auto; }
+    button { margin: 5px 0; padding: 10px; font-size: 1rem; width: 100%; }
+    input { width: 100%; padding: 10px; font-size: 1rem; margin-bottom: 20px; }
   </style>
 </head>
 <body>
   <h1>🎤 Italian TTS Voice Tester</h1>
-  <p>Click a voice to hear this phrase in different Italian accents:</p>
+  <p>Click a voice to hear this phrase in a local Italian accent:</p>
   <input type="text" id="phrase" value="Buongiorno, come stai?">
   <div id="voice-buttons"><p>Loading voices...</p></div>
 
@@ -41,7 +25,7 @@
       const phrase = document.getElementById('phrase').value;
       const utterance = new SpeechSynthesisUtterance(phrase);
       utterance.voice = voice;
-      speechSynthesis.cancel(); // cancel anything queued
+      speechSynthesis.cancel();
       speechSynthesis.speak(utterance);
     }
 
@@ -52,7 +36,10 @@
       container.innerHTML = '';
 
       if (italianVoices.length === 0) {
-        container.innerHTML = '<p>No Italian voices found. Try using Chrome or Safari and reload the page.</p>';
+        container.innerHTML = `
+          <p>No Italian voices were detected on this device.</p>
+          <p>To enable more, go to: <br><strong>Settings → Accessibility → Spoken Content → Voices → Italian</strong><br>Then download extra voices.</p>
+        `;
         return;
       }
 
@@ -64,8 +51,18 @@
       });
     }
 
+    function loadVoicesWithRetry(attempts = 5) {
+      const voices = speechSynthesis.getVoices();
+      if (voices.length > 1 || attempts === 0) {
+        loadVoices();
+      } else {
+        setTimeout(() => loadVoicesWithRetry(attempts - 1), 250);
+      }
+    }
+
     if (typeof speechSynthesis !== 'undefined') {
       speechSynthesis.onvoiceschanged = loadVoices;
+      loadVoicesWithRetry(); // fallback for iOS
     } else {
       document.getElementById('voice-buttons').innerHTML = '<p>Your browser does not support speech synthesis.</p>';
     }
