--- a/index.html
+++ b/index.html
@@ -34,3 +34,7 @@
   <p>Click a voice to hear this phrase in an Italian accent:</p>
   <input type="text" id="phrase" value="Buongiorno, come stai?" />
   <div id="voice-buttons"><p>Loading voices...</p></div>
+
+  <script src="main.js"></script>
+</body>
+</html>
