--- a/menu/menu.html
+++ b/menu/menu.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Italian Menu</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="menu/style.css">
 </head>
 <body>
   <h1>Italian Menu</h1>
   <div id="menu-container"></div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.4/tabletop.min.js"></script>
-  <script src="menu.js"></script>
+  <script src="https://cdn.cloudflare.com/ajax/libs/tabletop./1.5.4/tabletop.min."></script>
+  <script src="menu/menu.js"></script>
 </body>
 </html>
