--- a/menu/menu.html
+++ b/menu/menu.html
@@ -1,15 +1,19 @@
+<!-- menu/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Italian Menu</title>
+  <!-- correct: file is in the same folder as index.html -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Italian Menu</h1>
   <div id="menu-container"></div>
-  <script src="https://cdn.cloudflare.com/ajax/libs/tabletop./1.5.4/tabletop.min."></script>
+
+  <!-- correct CDN and path to your local JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.4/tabletop.min.js"></script>
   <script src="menu.js"></script>
 </body>
 </html>
